Change title from 'Zenthous Pro ERP' to 'Zenthous Invoice Suite'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zenthous Pro ERP | Professional Analytics Suite</title>
+    <title>Zenthous Invoice Suite</title>
     
     <!-- PWA Setup -->
     <meta name="theme-color" content="#4F46E5">
